valida jwt
